js/js.translator/testData/incremental/invalidation/inlineFunctionAsFunctionReference/lib1/l2.2.kt
inline fun foo(): String {
    konst callableReference: () -> String = ::bar
    return (callableReference().toInt() + 1).toString()
}
